# velib-lakehouse

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  dagster.yaml  docker-compose.yaml  pyproject.toml  workspace.yaml
.github/workflows/: ci.yml
dbt/: README.md  dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/gold/: schema.yml  velib_stations_at_risk.sql  velib_stations_empty_duration.sql  velib_stats_arrondissement.sql
dbt/models/silver/: schema.yml  velib_silver.sql
dbt/tests/: assert_bikes_available_not_negative.sql  assert_capacity_positive.sql  assert_depletion_rate_coherent.sql
docker/api/: Dockerfile
docker/dagster/: Dockerfile
src/: __init__.py  config.py  main.py
src/dagster/: __init__.py  assets.py  definitions.py  sensors.py
src/ingestion/: __init__.py  producer.py
src/maintenance/: __init__.py  cleaner.py
src/resources/: __init__.py  minio.py
src/serving/: __init__.py  api.py
tests/: test_api.py  test_producer.py
